fix voice on mobile

--- a/src/app/[folder]/[alias]/page.css
+++ b/src/app/[folder]/[alias]/page.css
@@ -1,7 +1,7 @@
 .content-container {
 	max-width: 800px;
 	margin: 0 auto;
-	padding: 32px 16px;
+	/* padding: 32px 16px; */
 	position: relative;
 }
 
